manifests/base/resources/tenants/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: tenants
    chart: tenants-4.0.17
    heritage: Helm
    release: tenants
  name: tenants
  namespace: $(NAMESPACE)
spec:
  ports:
  - name: tenants
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: tenants
    release: tenants
  type: ClusterIP
---
