manifests/base/resources/tenants/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://tenants-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $host_and_uri $http_host$request_uri;
      if ( $host_and_uri ~* "^.{2049,}$" ) { return 414; }
      rewrite (?i)/api/(.*) /$1 break;
      more_clear_input_headers "X-Forwarded-Host" "X-Forwarded-For" "X-Forwarded-Proto" "X-Original-URI" "X-Original-URL";
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: tenants
    chart: tenants-4.0.17
    heritage: Helm
    release: tenants
  name: tenants
  namespace: $(NAMESPACE)
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tenants
          servicePort: 8080
        path: /api/v1/tenants
      - backend:
          serviceName: tenants
          servicePort: 8080
        path: /api/v1/web-integrations
---
